@@ -1,3 +1,7 @@
+2015-01-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* bmpimage.c, dpxcrypt.c, dvi.c: Avoid compiler warnings.
+
 2015-01-07  Khaled Hosny  <khaledhosny@eglug.org>
 
 	* pdfdev.c (pdf_dev_reset_fonts): don't reset text_state.bold_param
